--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -2,9 +2,9 @@
 <div th:fragment="header" xmlns:th="http://www.thymeleaf.org">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Spring eCommerce</a>
+      <a class="navbar-brand" th:href="@{/administrador}">Spring eCommerce</a>
 
-      <form class="form-inline my-2 my-lg-0" method="post" action="#">
+      <form class="form-inline my-2 my-lg-0" method="get" action="#">
         <input class="form-control mr-sm-2" type="search"
                placeholder="Buscar" aria-label="Search" name="nombre"
                autocomplete="off">
@@ -14,15 +14,16 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="carrito.html">Carrito</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="login.html">Login</a>
-          </li>
+          <li class="nav-item dropdown"><a
+                  class="nav-link dropdown-toggle" href="#"
+                  id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false"> ADMIN </a>
+            <div class="dropdown-menu"
+                 aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" th:href="@{/productos}">Productos</a>
+            </div></li>
         </ul>
       </div>
     </div>
@@ -33,7 +34,7 @@
 <div th:fragment="footer" xmlns:th="http://www.thymeleaf.org">
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2025</p>
     </div>
   </footer>
 </div>
