--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -38,7 +38,7 @@
     <li class="breadcrumb-item active">Ver Productos</li>
   </ol>
 
-  <a class="btn btn-primary" href="#" > Crear Producto</a>
+  <a class="btn btn-primary" th:href="@{/productos/create}" > Crear Producto</a>
   <h2>Productos</h2>
   <table class="table">
     <thead>
@@ -59,12 +59,12 @@
         <td ></td>
         <td><a  class="btn btn-warning" href="">Editar</a> </td>
         <td><a  class="btn btn-danger" href="">Eliminar</a> </td>
-      </tr>       
+      </tr>
     </tbody>
   </table>
 
 </div>
-<!-- /.container -->
+<!-- /.footer -->
   <div th:include="administrador/template_admin.html::footer"></div>
 
 <!-- Bootstrap core JavaScript -->
