--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -61,7 +61,7 @@
           <a class="btn btn-warning" th:href="@{/productos/edit/{id}(id=${producto.id})}">Editar</a>
         </td>
         <td>
-          <a class="btn btn-danger" href="">Eliminar</a>
+          <a class="btn btn-danger" th:href="@{/productos/delete/{id}(id=${producto.id})}">Eliminar</a>
         </td>
       </tr>
     </tbody>
