--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -15,11 +14,9 @@
 
   <!-- Custom styles for this template -->
   <link th:href="@{css/heroic-features.css}" rel="stylesheet">
-
 </head>
 
 <body>
-
 <!-- Navigation -->
 <div th:include="administrador/template_admin.html::header">
 </div>
@@ -33,57 +30,23 @@
     <p class="lead">Tu tienda de productos en Línea</p>
   </header>
 
+
+
   <!-- Page Features -->
   <div class="row text-center">
-
-    <div class="col-lg-3 col-md-6 mb-4">
+    <div class="col-lg-3 col-md-6 mb-4" th:each="producto : ${productos}">
       <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+        <img class="card-img-top" th:src="@{/images/{img} (img=${producto.imagen})}" alt="">
         <div class="card-body">
-          <p class="card-text">Nombre del producto.</p>
+          <p class="card-text" th:text="${producto.nombre}"></p>
         </div>
         <div class="card-footer">
           <a href="productohome.html" class="btn btn-success">Ver producto</a>
         </div>
       </div>
     </div>
-
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-        <div class="card-body">
-          <p class="card-text">Nombre del producto.</p>
-        </div>
-        <div class="card-footer">
-          <a href="#" class="btn btn-success">Ver producto</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-        <div class="card-body">
-          <p class="card-text">Nombre del producto.</p>
-        </div>
-        <div class="card-footer">
-          <a href="#" class="btn btn-success">Ver producto</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-        <div class="card-body">
-          <p class="card-text">Nombre del producto.</p>
-        </div>
-        <div class="card-footer">
-          <a href="#" class="btn btn-success">Ver producto</a>
-        </div>
-      </div>
-    </div>
-
   </div>
+
   <!-- /.row -->
 
 </div>
