--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -12,10 +12,9 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+  <div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}"></div>
+  <div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}"></div>
 
-  <!-- Custom styles for this template -->
-  <link th:href="@{css/heroic-features.css}" rel="stylesheet">
 
 </head>
 
@@ -48,7 +47,38 @@
         </div>
       </div>
     </nav>
+  </div>
 
+  <!-- Navigation 2 -->
+  <div th:fragment="header-user">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
+
+        <form class="form-inline my-2 my-lg-0" method="get" th:action="@{/search}">
+          <input class="form-control mr-sm-2" type="search"
+                 placeholder="Buscar" aria-label="Search" name="nombre"
+                 autocomplete="off">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown"><a
+                    class="nav-link dropdown-toggle" href="#"
+                    id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">USER</a>
+              <div class="dropdown-menu"
+                   aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" th:href="@{/getCart}">Carrito</a>
+              </div></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </div>
 
     <!-- Footer -->
