--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -24,6 +24,7 @@
                  aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" th:href="@{/productos}">Productos</a>
               <a class="dropdown-item" th:href="@{/administrador/usuarios}">Usuarios</a>
+              <a class="dropdown-item" th:href="@{/administrador/ordenes}">Órdenes</a>
               <a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a>
             </div></li>
         </ul>
