--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -4,12 +4,13 @@
     <div class="container">
       <a class="navbar-brand" th:href="@{/administrador}">Spring eCommerce</a>
 
-      <form class="form-inline my-2 my-lg-0" method="get" action="#">
+      <form class="form-inline my-2 my-lg-0" method="get" th:action="@{/search}">
         <input class="form-control mr-sm-2" type="search"
                placeholder="Buscar" aria-label="Search" name="nombre"
                autocomplete="off">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
       </form>
+
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
