modificacion de plantillas, reparacion fix de imagenes, quitar requesmaping de homecontroller

--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -10,10 +10,11 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{/static/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link th:href="@{css/heroic-features.css}" rel="stylesheet">
+  <link th:href="@{/static/css/heroic-features.css}" rel="stylesheet">
+
 </head>
 
 <body>
@@ -56,8 +57,11 @@
 <div th:include="administrador/template_admin.html::footer">
 </div>
 
-<!-- Bootstrap core JavaScript -->
-<script th:src="@{vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!-- jQuery -->
+<script th:src="@{/static/vendor/jquery/jquery.min.js}"></script>
+
+<!-- Bootstrap bundle (incluye Popper) -->
+<script th:src="@{/static/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
 
 </body>
