--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -1,66 +1,51 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Spring eCommerce</title>
-
-
+  <title>Home</title>
   <!-- Bootstrap core CSS -->
-  <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{/static/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link th:href="@{css/heroic-features.css}" rel="stylesheet">
+  <link th:href="@{/static/css/heroic-features.css}" rel="stylesheet">
 
 </head>
-
 <body>
 
-  <!-- Navigation -->
-  <div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}"></div>
-  <div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}"></div>
+<!-- Header segun sesión -->
+<div th:include="usuario/template_usuario.html::header" th:if="${sesion == null}"></div>
+<div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion == null}"></div>
 
-    <!-- Page Content -->
-    <div class="container">
+<div class="container mt-5 pt-5">
+  <header class="jumbotron my-4">
+    <h1 class="display-3">Bienvenido a Spring Ecommerce 2021</h1>
+    <p class="lead">Tu tienda de productos en línea</p>
+  </header>
 
-      <!-- Jumbotron Header -->
-      <header class="jumbotron my-4">
-        <h1 class="display-3">Bienvenido a Spring Ecommerce 2021</h1>
-        <p class="lead">Tu tienda de productos en Línea</p>
-      </header>
-
-      <!-- Page Features -->
-      <div class="row text-center">
-
-        <div class="col-lg-3 col-md-6 mb-4" th:each="producto : ${productos}">
-          <div class="card h-100">
-            <img class="card-img-top" th:src="@{/images/{img} (img=${producto.imagen})}" alt="">
-            <div class="card-body">
-              <p class="card-text" th:text="${producto.nombre}"></p>
-            </div>
-            <div class="card-footer">
-              <a th:href="@{/productohome/{id} (id=${producto.id}) }" class="btn btn-success">Ver producto</a>
-            </div>
-          </div>
+  <div class="row text-center">
+    <div class="col-lg-3 col-md-6 mb-4" th:each="prod : ${productos}">
+      <div class="card h-100">
+        <img class="card-img-top" th:src="@{/images/{img}(img=${prod.imagen})}" alt="">
+        <div class="card-body">
+          <p class="card-text" th:text="${prod.nombre}"></p>
+        </div>
+        <div class="card-footer">
+          <a th:href="@{/productohome/{id}(id=${prod.id})}" class="btn btn-success">
+            Ver producto
+          </a>
         </div>
       </div>
-      <!-- /.row -->
-
     </div>
-    <!-- /.container -->
+  </div>
+</div>
 
-    <!-- Footer -->
-  <div th:include="usuario/template_usuario.html::footer"></div>
+<div th:include="usuario/template_usuario.html::footer"></div>
+<!-- jQuery -->
+<script th:src="@{/static/vendor/jquery/jquery.min.js}"></script>
 
-  <!-- Bootstrap core JavaScript -->
-  <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!-- Bootstrap bundle (incluye Popper) -->
+<script th:src="@{/static/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
-  </body>
+</body>
+</html>
 
-  </html>
