--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -12,10 +12,11 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{/static/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+  <link th:href="@{/static/css/heroic-features.css}" rel="stylesheet">
+
 
 </head>
 
@@ -86,9 +87,12 @@
   <!-- Footer -->
   <div th:include="usuario/template_usuario.html::footer"></div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <!-- jQuery -->
+  <script th:src="@{/static/vendor/jquery/jquery.min.js}"></script>
+
+  <!-- Bootstrap bundle (incluye Popper) -->
+  <script th:src="@{/static/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
 
 </body>
 
