--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -1,89 +1,68 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Spring eCommerce</title>
-
-
+  <title>Producto</title>
   <!-- Bootstrap core CSS -->
-  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{/static/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+  <link th:href="@{/static/css/heroic-features.css}" rel="stylesheet">
 
 </head>
-
 <body>
 
-  <!-- Navigation -->
-  <div th:include="usuario/template_usuario.html::header"></div>
+<div th:include="usuario/template_usuario.html::header" th:if="${sesion == null}"></div>
+<div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion == null}"></div>
 
-    <!-- Page Content -->
-    <div class="container">
+<div class="container mt-5 pt-5">
+  <h1 class="mt-4 mb-3">Spring eCommerce <small>Producto</small></h1>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+    <li class="breadcrumb-item active">Producto</li>
+  </ol>
 
-
-      <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Producto</small>
-      </h1>
-
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Producto</li>
-      </ol>
-
-      <!-- Blog Post -->
-      <div class="card mb-4">
-        <div class="card-body">
-          <div class="row">
-            <div class="col-lg-6">
-              <a href="#"> <img class="img-fluid rounded"
-                th:src="@{/images/{img} (img=${producto.imagen}) }"  alt="">
-              </a>
-            </div>
-            <div class="col-lg-6">
-              <form th:action="@{/cart}" method="POST">
-                <input type="hidden" th:value="${producto.id}" name="id">
-                <h2 class="card-title" th:text="${producto.nombre}"></h2>
-
-                <ul class="list-group">
-                  <li class="list-group-item"><h5 th:text=" 'Precio: '+ ${producto.precio} "></h5></li>
-                  <li class="list-group-item">
-                    <p th:text=" 'Descripcion: ' + ${producto.descripcion}"></p>
-                  </li>
-                  <li class="list-group-item"><h6>
-                    Cantidad: <input type="number" id="cantidad" name="cantidad" autocomplete="off"
-                    min="1" max="5" value="1">
-                  </h6></li>
-                </ul>
-
-
-                <button type="submit"  class="btn btn-dark">Añadir al carrito </button>
-
-              </form>
-            </div>
-          </div>
-        </div>
+  <div class="card mb-4">
+    <div class="row no-gutters">
+      <div class="col-lg-6">
+        <img class="img-fluid" th:src="@{/images/{img}(img=${producto.imagen})}" alt="">
       </div>
+      <div class="col-lg-6 card-body">
 
+        <!-- SI ESTÁ LOGUEADO -->
+        <div th:if="${sesion != null}">
+          <h2 th:text="${producto.nombre}">Nombre</h2>
+          <p><strong th:text="'Precio: ' + ${producto.precio}"></strong></p>
+          <p th:text="'Descripción: ' + ${producto.descripcion}"></p>
+          <form th:action="@{/cart}" method="post">
+            <input type="hidden" name="id" th:value="${producto.id}">
+            Cantidad:
+            <input type="number" name="cantidad" value="1" min="1" class="form-control w-25 d-inline-block">
+            <button type="submit" class="btn btn-dark mt-3">Añadir al carrito</button>
+          </form>
+        </div>
 
+        <!-- SI NO ESTÁ LOGUEADO -->
+        <div th:unless="${sesion != null}">
+          <h2 th:text="${producto.nombre}">Nombre</h2>
+          <p><strong th:text="'Precio: ' + ${producto.precio}"></strong></p>
+          <p th:text="'Descripción: ' + ${producto.descripcion}"></p>
+          <a th:href="@{/usuario/login}" class="btn btn-warning mt-3">
+            Inicia sesión para comprar
+          </a>
+        </div>
+
+      </div>
     </div>
-    <!-- /.container -->
+  </div>
+</div>
 
-  <!-- Footer -->
-  <div th:include="usuario/template_usuario.html::footer"></div>
+<div th:include="usuario/template_usuario.html::footer"></div>
+<!-- jQuery -->
+<script th:src="@{/static/vendor/jquery/jquery.min.js}"></script>
 
-  <!-- Bootstrap core JavaScript -->
-  <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!-- Bootstrap bundle (incluye Popper) -->
+<script th:src="@{/static/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
-
-  </body>
-
-  </html>
+</body>
+</html>
