--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -18,7 +18,7 @@
 
 <div class="container mt-5 pt-5">
   <header class="jumbotron my-4">
-    <h1 class="display-3">Bienvenido a Spring Ecommerce 2021</h1>
+    <h1 class="display-3">Bienvenido a Spring Ecommerce</h1>
     <p class="lead">Tu tienda de productos en línea</p>
   </header>
 
