--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -43,30 +43,35 @@
   <h2>Productos</h2>
   <table class="table">
     <thead>
-      <tr>
-        <th scope="col">Nombre</th>
-        <th scope="col">Descripción</th>
-        <th scope="col">Inventario</th>
-        <th scope="col">Precio</th>
-        <th scope="col">Acción</th>
-        <th scope="col">Acción</th>
-      </tr>
+    <tr>
+      <th scope="col">Imagen</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Descripción</th>
+      <th scope="col">Inventario</th>
+      <th scope="col">Precio</th>
+      <th scope="col">Acción</th>
+      <th scope="col">Acción</th>
+    </tr>
     </thead>
     <tbody>
-      <tr th:each="producto : ${productos}">
-        <td th:text="${producto.nombre}"></td>
-        <td th:text="${producto.descripcion}"></td>
-        <td th:text="${producto.cantidad}"></td>
-        <td th:text="${producto.precio}"></td>
-        <td>
-          <a class="btn btn-warning" th:href="@{/productos/edit/{id}(id=${producto.id})}">Editar</a>
-        </td>
-        <td>
-          <a class="btn btn-danger" th:href="@{/productos/delete/{id}(id=${producto.id})}">Eliminar</a>
-        </td>
-      </tr>
+    <tr th:each="producto : ${productos}">
+      <td>
+        <img th:src="${producto.imagen}" alt="Imagen" width="100" height="100"/>
+      </td>
+      <td th:text="${producto.nombre}"></td>
+      <td th:text="${producto.descripcion}"></td>
+      <td th:text="${producto.cantidad}"></td>
+      <td th:text="${producto.precio}"></td>
+      <td>
+        <a class="btn btn-warning" th:href="@{/productos/edit/{id}(id=${producto.id})}">Editar</a>
+      </td>
+      <td>
+        <a class="btn btn-danger" th:href="@{/productos/delete/{id}(id=${producto.id})}">Eliminar</a>
+      </td>
+    </tr>
     </tbody>
   </table>
+
 
 </div>
 <!-- /.footer -->
