--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -37,7 +37,8 @@
   <div class="row text-center">
     <div class="col-lg-3 col-md-6 mb-4" th:each="producto : ${productos}">
       <div class="card h-100">
-        <img class="card-img-top" th:src="${producto.imagen}" alt="Imagen" width="100" height="100">
+        <img class="card-img-top" th:src="@{${producto.imagen}}" alt=""
+             style="object-fit: cover; width: 100%; height: 200px;"/>
         <div class="card-body">
           <p class="card-text" th:text="${producto.nombre}"></p>
         </div>
