--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -56,7 +56,8 @@
     <tbody>
     <tr th:each="producto : ${productos}">
       <td>
-        <img th:src="${producto.imagen}" alt="Imagen" width="100" height="100"/>
+        <img th:src="${producto.imagen}" alt="Imagen del producto"
+             class="img-fluid" style="max-height: 400px; object-fit: contain;">
       </td>
       <td th:text="${producto.nombre}"></td>
       <td th:text="${producto.descripcion}"></td>
