--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -24,8 +24,8 @@
   <div class="row text-center">
     <div class="col-lg-3 col-md-6 mb-4" th:each="prod : ${productos}">
       <div class="card h-100">
-        <img class="card-img-top" th:src="${prod.imagen}" alt="Imagen del producto"
-             style="width: 100%; height: 200px; object-fit: cover;">
+        <img th:src="${producto.imagen}" alt="Imagen del producto" class="img-fluid" style="max-height:
+         400px; object-fit: contain;">
         <div class="card-body">
           <p class="card-text" th:text="${prod.nombre}"></p>
         </div>
