--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -37,7 +37,7 @@
   <div class="row text-center">
     <div class="col-lg-3 col-md-6 mb-4" th:each="producto : ${productos}">
       <div class="card h-100">
-        <img th:src="${producto.imagen}" alt="Imagen del producto" class="img-fluid" style="max-height: 400px; object-fit: contain;">
+        <img th:src="${producto.imagen} ?: '/images/default.jpg'" alt="Imagen del producto" class="img-fluid" style="max-height: 400px; object-fit: contain;">
         <div class="card-body">
           <p class="card-text" th:text="${producto.nombre}"></p>
         </div>
