--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -25,7 +25,10 @@
   <div class="card mb-4">
     <div class="row no-gutters">
       <div class="col-lg-6">
-        <img class="img-fluid" th:src="${producto.imagen}" alt="Imagen del producto" style="max-height: 400px; object-fit: contain;">
+        <img class="img-fluid"
+             th:src="${producto.imagen} ?: '/images/default.jpg'"
+             alt="Imagen del producto"
+             style="max-height: 400px; object-fit: contain;">
       </div>
       <div class="col-lg-6 card-body">
 
